# permedcoe

./: .gitignore  MANIFEST.in  README.md  clean.sh  install_sc.sh  package.sh  setup.cfg  setup.py  uninstall.sh
permedcoe/: __init__.py  base.py  main.py
permedcoe/core/: building_block.py  constants.py  decorators.py  environment.py  functions.py
permedcoe/templates/application/PyCOMPSs/: app.py  launch.sh  launch_without_pycompss.sh
permedcoe/templates/application/SnakeMake/: launch.sh
permedcoe/templates/building_block/skeleton_BB/: README.md  setup.cfg  setup.py  uninstall.sh
permedcoe/templates/building_block/skeleton_BB/src/bb/: __init__.py  main.py
permedcoe/utils/: arguments.py  artifact.py  environ.py  exceptions.py  executor.py  log.py  preproc.py
src/permedcoe/: __init__.py  __main__.py  base.py  bb.py
src/permedcoe/core/: building_block.py  constants.py  decorators.py  environment.py  functions.py
src/permedcoe/templates/application/PyCOMPSs/: app.py
src/permedcoe/templates/application/SnakeMake/: Snakefile
src/permedcoe/templates/building_block/skeleton_BB/: README.md  setup.py  uninstall.sh
src/permedcoe/templates/building_block/skeleton_BB/src/bb/: __init__.py  __main__.py  definition.json  definitions.py  main.py
src/permedcoe/templates/building_block/skeleton_BB/src/bb/assets/: my_binary.sh
src/permedcoe/utils/: arguments.py  artifact.py  environ.py  exceptions.py  executor.py  log.py  preproc.py  user_arguments.py
