[metadata]
name = permedcoe
version = 0.0.1
author = PerMedCoE Project
author_email = infoPerMedCoE@bsc.es
description = This package provides the common interface for the Building Blocks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PerMedCoE/permedcoe
project_urls =
    Bug Tracker = https://github.com/PerMedCoE/permedcoe/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Topic :: Scientific/Engineering :: Bio-Informatics
    Environment :: Console

[options]
packages=find:
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    permedcoe = permedcoe.main:main
