[metadata]
name = NEW_NAME
version = 0.0.1
author = Author
author_email = author@example.com
description = This package provides the a Building Block skeleton.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/PerMedCoE/skeleton_BB
project_urls =
    Bug Tracker = https://github.com/pypa/PerMedCoE/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires = permedcoe>=0.0.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    NEW_NAME = NEW_NAME.__main__:main
